test/typechecker.d/invalid/typedef-iso-0.surc
def isomorphism IntWrapper = { int_wrapper(unwrap: Integer) }

; int_wrapper: Int -> IntWrapper
; unwrap: IntWrapper -> Int

wrapped_int: Integer = int_wrapper << 8
